# optical-networking-gym

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  setup.py  test_qrmsa.py
.github/workflows/: build.yaml
docs/: mkdocs.yml
docs/docs/: get_started.md  index.md  qrmsa_env.md  topology.md  wrappers.md
examples/: create_topology.py  graph_utils.py
examples/JOCN_Benchmark_2024/: README.md  graph_launch_power.py  graph_load.py  graph_margin.py  plots.ipynb
examples/ONDM_2025/: debugger.py  env_check.ipynb  env_debugger.py  masked_wrapper.py  multi_ppo_debug.py  new_env_debugger.py  new_train_multi_ppo.py  ppo_debugger.py  teste_ppo1.py  train_multi_masked_ppo.py  train_ppo.ipynb  train_ppo.py
examples/topologies/: germany50_gn_3-paths_6-modulations.h5  germany50_gn_5-paths_6-modulations.h5  janos-us_gn_3-paths_6-modulations.h5  janos-us_gn_5-paths_6-modulations.h5  nobel-eu_gn_3-paths_6-modulations.h5  nobel-eu_gn_5-paths_6-modulations.h5  nobel-us.xml  nobel-us_gn_5-paths_6-modulations.h5  nsfnet_chen_5-paths_6-modulations.h5  nsfnet_chen_gn_5-paths_6-modulations.h5  ring_4.txt
optical_networking_gym/: env_setup.py  topology.pyx  utils.html  utils.pyx
optical_networking_gym/core/: core_classes.pyx  osnr.pyx
optical_networking_gym/envs/: __init__.py  qrmsa.pyx  rmsa.pyi  rmsa.pyx
optical_networking_gym/heuristics/: heuristics.py
optical_networking_gym/tests/: test_utils.py
optical_networking_gym/validation/: utils.py
optical_networking_gym/wrappers/: qrmsa_gym.py
tests/: test_qrmsa.py  test_rmsa.py  test_utils.py  utils.py
