[build-system]
requires = ["setuptools", "setuptools-scm", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "optical_networking_gym"
authors = [
    {name = "Carlos Natalino", email = "carlos.natalino@chalmers.se"},
]
description = "An Open-Source Toolkit for Benchmarking Resource Assignment Problems in Optical Networks"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.1-alpha"
keywords = ["optical networking", "reinforcement learning", "gym"]
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gymnasium",
    "numpy",
    "matplotlib",
    "networkx",
    "Cython",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-networkx",
    "pytest",
    "coverage[toml]",
]

research = [
    "matplotlib",
    "jupyterlab",
]

docs = [
    "sphinx",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".ruff_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.pytest]
testpaths = ["tests/"]

[tool.coverage.run]
plugins = ["Cython.Coverage"]
source = ["optical_networking_gym"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
